Fix overflow

--- a/src/pages/Page.scss
+++ b/src/pages/Page.scss
@@ -15,6 +15,9 @@
 
   &__content {
     height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   &__username-text {
